@@ -26,6 +26,7 @@
  * @summary Testing ClassFile Verifier.
  * @bug 8333812 8361526
  * @run junit VerifierSelfTest
+ * @run junit/othervm --enable-preview VerifierSelfTest
  */
 import java.io.IOException;
 import java.lang.classfile.constantpool.PoolEntry;
@@ -216,7 +217,6 @@ class VerifierSelfTest {
                                 cob.iconst_0()
                                    .ifThen(CodeBuilder::nop)
                                    .return_()
-                                   .with(new CloneAttribute(StackMapTableAttribute.of(List.of())))
                                    .with(new CloneAttribute(CharacterRangeTableAttribute.of(List.of())))
                                    .with(new CloneAttribute(LineNumberTableAttribute.of(List.of())))
                                    .with(new CloneAttribute(LocalVariableTableAttribute.of(List.of())))
@@ -336,12 +336,10 @@ class VerifierSelfTest {
                 Wrong Signature attribute length in method ParserVerificationTestClass::m()
                 Wrong Synthetic attribute length in method ParserVerificationTestClass::m()
                 Code attribute in native or abstract method ParserVerificationTestClass::m()
-                Wrong StackMapTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong CharacterRangeTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong LineNumberTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong LocalVariableTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong LocalVariableTypeTable attribute length in Code attribute for method ParserVerificationTestClass::m()
-                Multiple StackMapTable attributes in Code attribute for method ParserVerificationTestClass::m()
                 Multiple Signature attributes in Record component c of class ParserVerificationTestClass
                 Wrong Signature attribute length in Record component c of class ParserVerificationTestClass
                 Multiple RuntimeVisibleAnnotations attributes in Record component c of class ParserVerificationTestClass
@@ -509,5 +507,70 @@ class VerifierSelfTest {
             assertNotEquals(List.of(), errors, "invokespecial, isInterface = " + isInterface);
             assertTrue(errors.getFirst().getMessage().contains("interface method to invoke is not in a direct superinterface"), errors.getFirst().getMessage());
         }
+    }
+
+    enum ComparisonInstruction {
+        IF_ACMPEQ(Opcode.IF_ACMPEQ, 2),
+        IF_ACMPNE(Opcode.IF_ACMPNE, 2),
+        IFNONNULL(Opcode.IFNONNULL, 1),
+        IFNULL(Opcode.IFNULL, 1);
+        final Opcode opcode;
+        final int argCount;
+        ComparisonInstruction(Opcode opcode, int argCount) {
+            this.opcode = opcode;
+            this.argCount = argCount;
+        }
+    }
+
+    enum UninitializeKind {
+        UNINITIALIZED, UNINITIALIZED_THIS
+    }
+
+    @ParameterizedTest
+    @MethodSource("uninitializedInBytecodeClasses")
+    public void testUninitializedInComparisons(ComparisonInstruction inst, UninitializeKind kind) throws Throwable {
+        var bytes = ClassFile.of(ClassFile.StackMapsOption.DROP_STACK_MAPS).build(ClassDesc.of("Test"), clb -> clb
+                .withMethodBody(INIT_NAME, MTD_void, 0, cob -> {
+                    StackMapFrameInfo.VerificationTypeInfo uninitializeInfo;
+                    if (kind == UninitializeKind.UNINITIALIZED) {
+                        uninitializeInfo = StackMapFrameInfo.UninitializedVerificationTypeInfo.of(cob.newBoundLabel());
+                        cob.new_(CD_Object);
+                    } else {
+                        uninitializeInfo = StackMapFrameInfo.SimpleVerificationTypeInfo.UNINITIALIZED_THIS;
+                        cob.aload(0);
+                    }
+
+                    // Stack: uninitializeInfo
+                    for (int i = 0; i < inst.argCount; i++) {
+                        cob.dup();
+                    }
+                    var dest = cob.newLabel();
+                    cob.branch(inst.opcode, dest)
+                       .nop()
+                       .labelBinding(dest)
+                       .with(StackMapTableAttribute.of(List.of(StackMapFrameInfo.of(dest,
+                               List.of(StackMapFrameInfo.SimpleVerificationTypeInfo.UNINITIALIZED_THIS),
+                               List.of(uninitializeInfo)))))
+                       .invokespecial(CD_Object, INIT_NAME, MTD_void);
+                    if (kind == UninitializeKind.UNINITIALIZED) {
+                        // still need to call super constructor
+                        cob.aload(0)
+                           .invokespecial(CD_Object, INIT_NAME, MTD_void);
+                    }
+                    cob.return_();
+                }));
+        var errors = ClassFile.of().verify(bytes);
+        assertNotEquals(List.of(), errors, () -> errors + " : " + ClassFile.of().parse(bytes).toDebugString());
+        var lookup = MethodHandles.lookup();
+        assertThrows(VerifyError.class, () -> lookup.defineHiddenClass(bytes, true)); // force JVM verification
+    }
+
+    public static Stream<Arguments> uninitializedInBytecodeClasses() {
+        return Arrays.stream(ComparisonInstruction.values())
+                .mapMulti((inst, sink) -> {
+                    for (var kind : UninitializeKind.values()) {
+                        sink.accept(Arguments.of(inst, kind));
+                    }
+                });
     }
 }
